# kasia-indexer

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: ci.yml  docker.yml
cli/: Cargo.toml
cli/src/: config.rs  main.rs
examples/: sync.rs
indexer/: Cargo.toml
indexer-actors/: Cargo.toml
indexer-actors/src/: block_gap_filler.rs  block_processor.rs  data_source.rs  fifo_set.rs  lib.rs  metrics.rs  periodic_processor.rs  ticker.rs  util.rs  virtual_chain_processor.rs  virtual_chain_syncer.rs
indexer-actors/src/block_processor/: message.rs
indexer-actors/src/virtual_chain_processor/: message.rs
indexer-db/: Cargo.toml
indexer-db/src/: headers.rs  lib.rs  messages.rs  metadata.rs  migration.rs  processing.rs
indexer-db/src/headers/: block_compact_headers.rs  block_gaps.rs  daa_index.rs
indexer-db/src/messages/: contextual_message.rs  handshake.rs  payment.rs  self_stash.rs
indexer-db/src/migration/: v0.rs
indexer-db/src/processing/: accepting_block_to_txs.rs  pending_senders.rs  tx_id_to_acceptance.rs
indexer-lib/: Cargo.toml
indexer-lib/examples/: historical_block_sync.rs  subscriber.rs  sync.rs  sync_selected_chain.rs
indexer-lib/src/: acceptance_worker.rs  block_processor.rs  block_worker.rs  database.rs  fifo_set.rs  historical_syncer.rs  lib.rs  metrics.rs  periodic_processor.rs  resolver.rs  scan_worker.rs  selected_chain_syncer.rs  subscriber.rs  virtual_chain_processor.rs
indexer-lib/src/database/: acceptance.rs  accepting_block_gaps.rs  accepting_block_scores.rs  block_compact_header.rs  block_daa_scores.rs  block_gaps.rs  contextual_message_by_sender.rs  handshake.rs  metadata.rs  payment.rs  pending_sender_resolution.rs  resolution_keys.rs  skip_tx.rs  unknown_accepting_daa.rs  unknown_tx.rs  util.rs
indexer-lib/src/database/acceptance/: trigger.rs  trigger_tests.rs
indexer-lib/src/database/headers/: block_compact_headers.rs  block_gaps.rs  daa_index.rs  mod.rs
indexer-lib/src/database/messages/: contextual_messages.rs  handshakes.rs  mod.rs  payments.rs  self_stashes.rs
indexer-lib/src/database/processing/: acceptance.rs  mod.rs  pending_sender_resolution.rs  skipped_transactions.rs  skipped_tx_by_block.rs  unknown_daa_scores.rs  unknown_transactions.rs
indexer/src/: api.rs  config.rs  context.rs  main.rs  signals.rs
indexer/src/api/: v1.rs
indexer/src/api/v1/: contextual_messages.rs  handshakes.rs  payments.rs  self_stash.rs
protocol/: Cargo.toml
protocol/src/: PROTO.md  lib.rs  operation.rs
protocol/src/operation/: deserializer.rs
protocol/src/protocol/: deserializer.rs  mod.rs  operation.rs
src/: fifo_set.rs
