[workspace]
members = [
    "indexer-lib",
    "protocol",
]
resolver = "3"


[workspace.dependencies]
anyhow = "1.0.98"
bytemuck = "1.23.1"
faster-hex = "0.10.0"
fjall = { version = "2.11.1", default-features = false, features = ["lz4", "miniz", "ssi_tx"] }
flume = "0.11.1"
futures-util = "0.3.31"
itertools = "0.14.0"
kaspa-addresses = "1.*"
kaspa-core = "1.*"
kaspa-rpc-core = "1.*"
kaspa-txscript = "1.*"
kaspa-wrpc-client = "1.*"
ringmap = "0.1.4"
rolling-file = "0.2.0"
tokio = "1.45.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
workflow-core = "0.18.0"

protocol = { path = "protocol" }

[patch.crates-io]
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
