[workspace]
members = [
    "indexer-lib",
    "protocol",
    "indexer",
    "indexer-db",
    "indexer-actors",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.98"
arrayref = "0.3.9"
arc-swap = "1.7.1"
axum = "0.8.4"
bon = "3.*"
bytemuck = "1.23.1"
faster-hex = "0.10.0"
fjall = { version = "2.11.2", default-features = false, features = ["lz4", "miniz", "ssi_tx"] }
flume = "0.11.1"
fstr = "0.2.13"
futures-util = "0.3.31"
itertools = "0.14.0"
kaspa-addresses = "1.*"
kaspa-consensus-core = "1.*"
kaspa-math = "1.*"
kaspa-rpc-core = "1.*"
kaspa-txscript = "1.*"
kaspa-wrpc-client = "1.*"
parking_lot = "0.12.4"
ringmap = "0.1.4"
rolling-file = "0.2.0"
serde = "1.0"
serde_with = "3.14.0"
thiserror = "2.0.12"
time = "0.3.41"
tokio = "1.45.1"
tower-http = "0.6"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
utoipa = "5.0"
utoipa-swagger-ui = "9"
workflow-core = "0.18.0"
workflow-rpc = "0.18.0"
workflow-serializer = "0.18.0"
dotenv = "0.15.0"
zerocopy = "0.8.26"
envy = "0.4"

protocol = { path = "protocol" }

indexer-actors = { path = "indexer-actors" }
indexer-lib = { path = "indexer-lib" }
indexer-db = { path = "indexer-db" }

[patch.crates-io]
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-math = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }

fjall = { git = "https://github.com/fjall-rs/fjall.git", branch = "improve-write-stalling" }
