[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["cargo"]}
anyhow = { workspace = true }
dotenv = { workspace = true }
faster-hex = { workspace = true }
fjall = { workspace = true }
futures-util = { workspace = true }
kaspa-addresses = { workspace = true }
rolling-file = { workspace = true }
serde = { workspace = true, features = ["derive"] }
time = { workspace = true, features = ["macros"]}
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "local-time"] }
workflow-core = { workspace = true }
serde_with = { workspace = true }
envy = { workspace = true }
kaspa-consensus-core = { workspace = true }

indexer-lib = { path = "../indexer-lib", features = ["utoipa"] }

