[package]
name = "indexer-actors"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
bon.workspace = true
bytemuck = { workspace = true, features = ["latest_stable_rust"]}
fjall.workspace = true
flume.workspace = true
futures-util.workspace = true
itertools.workspace = true
kaspa-addresses.workspace = true
kaspa-consensus-core.workspace = true
kaspa-math.workspace = true
kaspa-rpc-core.workspace = true
kaspa-txscript.workspace = true
kaspa-wrpc-client.workspace = true
parking_lot.workspace = true
ringmap.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tracing.workspace = true
utoipa = { workspace = true, optional = true }
workflow-core.workspace = true
workflow-rpc.workspace = true
workflow-serializer.workspace = true

indexer-db.workspace = true
