[package]
name = "indexer-actors"
version = "0.1.0"
edition = "2024"

[features]
default = []
serde = ["dep:serde", "dep:serde_with"]
utoipa = ["serde", "dep:utoipa"]


[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
bon = { workspace = true }
faster-hex.workspace = true
fjall.workspace = true
flume.workspace = true
fstr.workspace = true
futures-util.workspace = true
kaspa-consensus-core.workspace = true
kaspa-rpc-core.workspace = true
kaspa-wrpc-client.workspace = true
ringmap.workspace = true
serde = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
utoipa = { workspace = true, optional = true }
workflow-core.workspace = true
workflow-rpc.workspace = true
workflow-serializer.workspace = true

indexer-db.workspace = true
protocol.workspace = true
