[package]
name = "indexer-db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
arrayref = "0.3.9"

fjall.workspace = true
rayon.workspace = true
smallvec.workspace = true
tracing.workspace = true
zerocopy = { workspace = true, features = ["derive"] }

kaspa-consensus-core.workspace = true
kaspa-txscript.workspace = true
kaspa-addresses.workspace = true
