[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
faster-hex = { workspace = true }
fjall = { workspace = true }
flume = { workspace = true }
futures-util = { workspace = true }
kaspa-wrpc-client = { workspace = true }
parking_lot = { workspace = true }
time = { workspace = true , features = ["macros"]}
tokio = { workspace = true, features = ["signal"] }

dotenv = { workspace = true }

tracing = { workspace = true }
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "local-time"] }

workflow-core = { workspace = true }
rolling-file = { workspace = true }

indexer-lib = { path = "../indexer-lib" }

axum = "0.8.4"
serde = { version = "1.0.204", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tower-http = { version = "0.6.6", features = ["cors"] }

kaspa-addresses = { workspace = true }
kaspa-rpc-core = { workspace = true }
