[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum.workspace = true
dotenv = { workspace = true }
faster-hex = { workspace = true }
fjall = { workspace = true }
flume = { workspace = true }
futures-util = { workspace = true }
kaspa-addresses = { workspace = true }
kaspa-rpc-core = { workspace = true }
kaspa-wrpc-client = { workspace = true }
parking_lot = { workspace = true }
rolling-file = { workspace = true }
serde = { workspace = true, features = ["derive"] }
time = { workspace = true , features = ["macros"]}
tokio = { workspace = true, features = ["signal"] }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "local-time"] }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
workflow-core = { workspace = true }
serde_with = { workspace = true }
envy = { workspace = true }

indexer-lib = { path = "../indexer-lib", features = ["utoipa"] }

